--- a/client/global.css
+++ b/client/global.css
@@ -5,6 +5,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes shimmer {
+  0% {
+    background-position: 200% center;
+  }
+  100% {
+    background-position: -200% center;
+  }
+}
+
 @layer base {
   /**
    * Tailwind CSS theme - Premium Butcher Shop Colors
